--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,15 @@
 // Navigation Styles here
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  padding: 1% 18%;
+  border-bottom: 2px dashed @navigation-border;
+  a {
+    text-decoration: none;
+    color: black;
+    margin: 0 1rem;
+    font-size: 1.6rem;
+    line-height: 1.9;
+  }
+}
