--- a/less/home-page.less
+++ b/less/home-page.less
@@ -46,7 +46,9 @@
       border-radius: 10px;
     }
   }
-
+.zen {
+  padding-bottom: 30px;
+}
   .content-pick {
     padding-top: 30px;
     border-top: 2px dashed @navigation-border;
