- Added '.btn' mixin (needs repair)

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,12 @@
 // Mixins in here
+
+.btn(@height: auto, @width: 80%, @ftcolor: white, @bgcolor: darkCyan) {
+  height: @heght;
+  width: @width;
+  padding: 2% 4%;
+  color: @ftcolor;
+  background-color: @bgcolor;
+  border-radius: 10px;
+  text-align: center;
+  font-size: 2.5rem;
+}
